--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -37,6 +37,9 @@
 
  <!--Parrafo que muestra el texto de bienvenida-->
   <p>¡Este es un ejemplo de parrafo de texto en una pagina html. Se puede utilizar la letra ñ!</p>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et at quis minus iste non quos est provident iure repellendus. Quo similique vero consequuntur enim fugit placeat iure, praesentium doloribus dolorum!</p>
+
+
   </body>
      </html>
      
